[project]
name = "langchain-ai-bot"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "IKDrocket", email = "yusuke1128rocket@gmail.com" }
]
dependencies = [
    "streamlit>=1.28.2",
    "langchain>=0.0.27",
    "openai>=1.3.6",
    "youtube-transcript-api>=0.6.1",
    "pytube>=15.0.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.1.6",
    "mypy>=1.7.1",
]

[tool.rye.scripts]
lint = "ruff check --fix ."
typecheck = "mypy"


[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff.isort]
known-third-party = ["fastapi", "pydantic", "starlette"]

[tool.mypy]
strict = true
